bazel_dep(name = "aspect_rules_js", version = "2.3.3")
bazel_dep(name = "rules_nodejs", version = "6.3.4")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.14.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
        "//:patches/@vscode__vsce.patch",
    ],
    patch_args = {
        "*": ["-p1"],
    },
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

bazel_dep(name = "rules_pkg", version = "1.1.0")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.6.5",
)

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

bazel_dep(name = "aspect_rules_ts", version = "3.5.1")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")

esbuild = use_extension("@aspect_rules_esbuild//esbuild:extensions.bzl", "esbuild")
esbuild.toolchain(
    name = "esbuild",
    esbuild_version = "0.23.0",
)
use_repo(esbuild, "esbuild_toolchains")

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "aspect_rules_lint", version = "1.2.2")

node_dev = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
    dev_dependency = True,
)
use_repo(node_dev, "nodejs_toolchains")

# bazel_dep(name = "aspect_rules_lint", version = "1.3.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.0.1", dev_dependency = True)

bazel_dep(name = "aspect_rules_swc", version = "2.0.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")
bazel_dep(name = "rules_oci", version = "2.2.3")
bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "rules_multitool", version = "1.2.0", dev_dependency = True)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:multitool.lock.json")
use_repo(multitool, "multitool")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "session_manager_repo",
    build_file = "@//:BUILD_SESSION_MANAGER.bazel",
    integrity = "sha256-V5W4A6xgqwWEWbN2bGMAzJWYDB9VNeGlSmYUZBhhHDk=",
    strip_prefix = "session-manager-plugin-b2b0bcd769d1c0693f77047360748ed45b09a72b",
    url = "https://github.com/aws/session-manager-plugin/archive/b2b0bcd769d1c0693f77047360748ed45b09a72b.tar.gz",
)
