load("//:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

test_srcs = ["*.test.ts"]

ts_project(
    name = package_name(),
    srcs = glob(
        ["*.ts"],
        exclude = test_srcs,
    ),
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/@types/vscode",
        "//:node_modules/rxjs",
        "//:package",
        "//aws-client",
        "//rxjs",
    ],
)
