load("//:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = package_name(),
    srcs = glob(["*.ts"]) + [
        "//:package",
    ],
    deps = [
        "//:node_modules/@aws-sdk/client-ec2",
        "//:node_modules/@aws-sdk/client-ssm",
        "//:node_modules/@types/lodash",
        "//:node_modules/lodash",
        "//:node_modules/rxjs",
        "//aws-client",
        "//rxjs",
    ],
)
