load("//:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

test_srcs = ["*.test.ts"]

ts_project(
    name = package_name(),
    srcs = glob(
        ["*.ts"],
        exclude = test_srcs,
    ),
    deps = [
        "//:node_modules/@smithy/shared-ini-file-loader",
        "//:node_modules/@types/node",
        "//:node_modules/@types/vscode",
        "//command",
        "//config",
    ],
)
