load("//:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

test_srcs = ["*.test.ts"]

lib_name = package_name()

ts_project(
    name = lib_name,
    srcs = glob(
        ["*.ts"],
        exclude = test_srcs,
    ),
    deps = [
        "//:node_modules/@aws-sdk/client-ec2-instance-connect",
        "//:node_modules/@aws-sdk/client-ssm",
        "//:node_modules/@types/node",
        "//aws-client",
        "//config",
        "//ec2",
    ],
)
